--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "OR researcher"
   location         : "Sichuan"
   employer         : "Sichuan University"
-  uri              : https://murphylee914.github.io/
+  uri              : "https://murphylee914.github.io/"
   email            : "murphylee914@gmail.com" 
 
   # Academic websites
