--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "MurphyLee914/Lee914.github.io/"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/peep.png"
+  avatar           : "peep.png"
   name             : "Li Zhou"
   pronouns         : "he"# example: "she/her"  
   bio              : "OR researcher"
@@ -32,17 +32,17 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=bs3MD1kAAAAJ&hl=zh-CN"
+  googlescholar    : # "https://scholar.google.com/citations?user=bs3MD1kAAAAJ&hl=zh-CN"
   impactstory      : # URL
   orcid            : # "http://orcid.org/yourorcidurl"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : "https://www.researchgate.net/profile/Li-Zhou-127" # URL
+  researchgate     : # "https://www.researchgate.net/profile/Li-Zhou-127" # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/MurphyLee914"
+  github           : # "https://github.com/MurphyLee914"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -54,7 +54,7 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : "https://instagram.com/murphylee0914?igshid=NTc4MTIwNjQ2YQ==" # Username
+  instagram        : # "https://instagram.com/murphylee0914?igshid=NTc4MTIwNjQ2YQ==" # Username
   lastfm           : # Username
   linkedin         : # Username
   mastodon         : # URL
