--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Lee' Personal Homepage"
 title_separator          : "-"
 name                     : &name "Li Zhou"
 description              : &description "A student"
-url                      : https://github.com/MurphyLee914/Lee914.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://murphylee914.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "MurphyLee914/Lee914.github.io"
 
