--- a/_config.yml
+++ b/_config.yml
@@ -211,6 +211,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  blog posts:
+    output: true
+    permalink: /:collection/:path/  
 
 
 # Defaults
